---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundling/all_variable_handling/main.py
---
ExecutionResults {
    status: Success,
    stdout: "Testing simple module exports:\npublic_func() = Hello from public_func\nCONSTANT = 42\n\nTesting nested package exports:\nexported_from_init() = From init, using helper: helper result\nsub_function() = Hello from submodule\n\nTesting conflict resolution:\nmessage = from conflict_module\n\nsimple_module.__all__ = ['public_func', 'CONSTANT']\nsubmodule.__all__ = ['sub_function', 'SUB_CONSTANT']",
    stderr: "",
}
